renders products to page

--- a/app/scripts/templates/product.ejs
+++ b/app/scripts/templates/product.ejs
@@ -1,1 +1,7 @@
-<h1>Test</h1>
+<div class="offer-box">
+    <div class="offer-box__image">
+        <img src="<%= medium %>">
+    </div>
+    <h1><%= name %></h1>
+    <p><%= type %></p>
+</div>
