adds sku and price

--- a/app/scripts/templates/product.ejs
+++ b/app/scripts/templates/product.ejs
@@ -4,4 +4,8 @@
     </div>
     <h1><%= name %></h1>
     <p><%= type %></p>
+    <label>
+        <input type="checkbox" name="product" value="<%= sku %>">
+        $<%= price %>/mo
+    </label>
 </div>
